--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Development
-APP_PORT=6001
+APP_PORT=6002
 DB_PORT=3306
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=Paru@1993
+DB_PASS=It@12345
 # DB_HOST=localhost
 # DB_USER=webadmin
 # DB_PASS=123456
