--- a/.env
+++ b/.env
@@ -1,12 +1,9 @@
 # Development
-APP_PORT=6002
+APP_PORT=6001
 DB_PORT=3306
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=It@12345
-# DB_HOST=localhost
-# DB_USER=webadmin
-# DB_PASS=123456
+DB_PASS=Paru@1993
 MYSQL_DB=ahanex
 JWT_KEY=@dhj$&$(*)dndkm76$%jdn(^$6GH%^ahy484&*((73kk))lko65HSJ58*&%gd75hfgJdk237^5jKIj8&6)kBG*&F^%V*-
 
